# longzhongxian

./: .env.example  .gitignore  CLAUDE.md  Makefile  lessons.md  pyproject.toml
alembic/: env.py
alembic/versions/: b7390c21f9ae_initial_schema.py
config/: store_accounts.yaml
config/job_profiles/: _schema.yaml  can_yin_xue_tu.yaml  chu_bei_zhong_zi.yaml  mian_dian_shi.yaml  shou_yin_yuan.yaml  wai_pin_chu_bei.yaml  zhu_pin_shi.yaml
deploy/: README.md  longzhongxian.service  setup.sh  start-wsl.vbs
docs/architecture/: ADR-001_架构决策记录_V1.1.md
docs/job-profiles/: 1.面试官证管理办法.txt  2.面试官理论考核.docx  3.面试官认证标准.xls  4.面试官资格撤销管理制度.docx  应聘登记表（门店）.xlsx  门店招聘岗位信息.xlsx  面试工具表（提问参考+行为分析）.xlsx
docs/requirements/: Phase1_线上初筛_V1需求说明.md
docs/research/: boss-zhipin-community.md  boss-zhipin-hands-on.md  boss-zhipin-opensource.md  boss-zhipin-platform.md  browser-automation.md  push-channel-and-llm.md
docs/tasks/: TASK_LIST.md
scripts/: check_env.py  check_logger.py
src/: __init__.py  app.py
src/c1_scraper/: __init__.py  browser.py  candidate_store.py  detail_extractor.py  models.py  pipeline.py  recommend_scraper.py
src/c2_scorer/: __init__.py  hard_rules.py  llm_scorer.py  pipeline.py  profile_loader.py  score_merger.py  snapshot_store.py
src/c3_push/: __init__.py  channel.py  report_builder.py  report_sender.py  (+2 more)
tests/: __init__.py  conftest.py  test_app.py  test_dispatcher.py  test_e2e_callback.py  test_quota_manager.py  test_report_builder.py  test_report_sender.py  test_screening_pipeline.py  test_smoke.py  test_summary_generator.py  test_task_queue.py
(+62 files in other folders)
